Fixing iframe scrollbar issue

--- a/public/css/docs.css
+++ b/public/css/docs.css
@@ -217,7 +217,7 @@ p.section-title {
 }
 
 #frame-container iframe {
-	width: 77.6%; height: 100%; border: 0; position: absolute;
+	width: 77.0%; height: 100%; border: 0; position: absolute;
 }
 
 body.docsbase {
